# remix-workflow-v3

./: .gitignore  .remix-workspace-root.example.json  AGENTS.md  README.md  pipeline-flowchart.md  skills-lock.json  youtube-snapshot.md
.agents/skills/deep-house-lyric-structuring/: SKILL.md
.agents/skills/instagram-lyrics-extractor/: SKILL.md
.agents/skills/remix-full-pipeline/: SKILL.md
.agents/skills/remix-phase-one/: SKILL.md
.agents/skills/remix-phase-two/: LESSONS.md  SKILL.md
.agents/skills/suno-music-creator/: SKILL.md
docs/: intent.md  lyrics-sync-proposal.md  video-visual-system-plan.md
docs/superpowers/plans/: 2026-04-16-instagram-lyrics-extractor.md  2026-04-16-shorts-generation.md  2026-04-18-workspace-root-implementation.md  2026-04-24-readme-features-tools-pipeline.md  2026-04-24-visual-image-sequence.md  2026-04-26-pilla-acapella-cleanup.md  2026-04-28-fal-frame-stylizer.md  2026-05-03-ace-step-local-generation.md  2026-05-16-live-vocal-tuner.md
docs/superpowers/specs/: 2026-04-16-instagram-lyrics-extractor-design.md  2026-04-16-remix-phase-skills-design.md  2026-04-16-shorts-generation-design.md  2026-04-17-instagram-lyrics-extractor-skill-design.md  2026-04-18-workspace-root-design.md  2026-04-20-naa-chitti-prema-progressive-long-lyrics-design.md  2026-04-20-phase-one-hybrid-stem-extraction-design.md  2026-04-24-visual-image-sequence-design.md  2026-04-26-pilla-acapella-cleanup-design.md  2026-04-28-fal-frame-stylizer-design.md  2026-05-03-ace-step-local-generation-design.md  2026-05-16-live-vocal-tuner-design.md
prompts/: README.md  step-0-prepare-workspace.md  step-1-download-mp3.md  step-10-select-short-clip.md  step-11-generate-short-video.md  step-2-5-prepare-acapella.md  step-2-extract-acapella.md  step-3-find-lyrics.md  step-4-generate-suno-lyrics.md  step-5-generate-with-ace-step.md  step-5-upload-to-suno.md  step-6-extract-acapella-and-align.md  step-6-generate-video.md  step-7-fetch-cover-art.md  step-8-generate-video.md  step-9-generate-youtube-metadata.md
prompts/references/: acapella-extractor-usage.md  chrome-devtools-patterns.md  error-handling-patterns.md  suno-format-guide.md  workspace-conventions.md
prompts/styles/: clean-deep-house.md  my-love-brazilian-mandelao.md  organic-house-sharat-dhurandhar.md  yekanthanga-deep-house.md
tools/acapella-extractor/: README.md  align_lyrics.py  main.py  pyproject.toml  verify_lyrics.py
tools/acapella-extractor/src/acapella_extractor/: __init__.py  extract.py  prepare.py
tools/acapella-extractor/tests/: test_extract.py  test_prepare.py
tools/ace-step-generator/: pyproject.toml
tools/ace-step-generator/ace_step_generator/: generate.py
tools/ace-step-generator/tests/: test_generate.py
tools/instagram-lyrics-extractor/: README.md  pyproject.toml
tools/instagram-lyrics-extractor/src/instagram_lyrics_extractor/: __init__.py  audio_transcriber.py  cli.py  formatter.py  merger.py  models.py  video_processor.py  visual_analyzer.py
tools/instagram-lyrics-extractor/tests/: conftest.py  test_api.py  test_audio_transcriber.py  test_cli.py  test_formatter.py  test_merger.py  test_models.py  test_video_processor.py  test_visual_analyzer.py
tools/shared/: workspace-root.js  workspace-root.test.js
tools/video-generator/: README.md  generate-design.js  init-video.js  init-video.test.js
tools/video-generator/template/: package.json  tsconfig.json
tools/video-generator/template/public/: design.json.example
tools/video-generator/template/src/: MusicVideo.tsx  MusicVideoShort.tsx  Root.tsx  index.tsx
tools/video-generator/template/src/components/: AuroraBackground.tsx  FrequencyBarsVisualizer.tsx  (+5 more)
tools/visual-sequence/: package.json  stylize-fal.test.js  stylize-fal.ts  visual-sequence.js  visual-sequence.test.js
tools/vocal-tuner/: Cargo.toml  PRODUCTION.md  README.md  verify.sh
tools/vocal-tuner/src/: audio.rs  cli.rs  devices.rs  dsp.rs  lib.rs  live.rs  main.rs  music.rs  recorder.rs  wav.rs
(+13 files in other folders)
