[project]
name = "instagram-lyrics-extractor"
version = "0.1.0"
description = "Extract lyrics from Instagram videos using parallel visual (LLaVA) + audio (Whisper) analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "openai-whisper>=20240930",
    "transformers>=4.45.0",
    "torch>=2.11.0",
    "accelerate>=1.0.0",
    "pillow>=10.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
instagram-lyrics-extract = "instagram_lyrics_extractor.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "black>=24.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/instagram_lyrics_extractor"]
